# clawchain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md
backend/: app.py  cli.py  config.py  config_schema.py  requirements.txt
backend/api/: agents.py  approvals.py  chat.py  compress.py  config_api.py  cron_api.py  events.py  files.py  sessions.py
backend/cron/: __init__.py  scheduler.py  store.py  types.py
backend/data/: config.template.json
backend/graph/: agent.py  approval_store.py  audit_log.py  command_parser.py  errors.py  heartbeat.py  heartbeat_utils.py  llm_factory.py  memory_indexer.py  memory_search_engine.py  message_queue.py  model_selection.py  models_config.py  prompt_builder.py  retry.py  run_tracker.py  session_lifecycle.py  session_manager.py  session_pruning.py  subagent_archive.py  subagent_registry.py  subagent_registry_state.py  subagent_resume.py  thinking.py  token_counter.py  tool_call_injector.py  tool_call_parser.py  workspace.py
backend/infra/: __init__.py  system_events.py
backend/sandbox/: __init__.py  app_sandbox.py  exec_approval.py  exec_policy.py  fs_policy.py  loop_detection.py  undo_stack.py
backend/scheduler/: lifecycle.py  (+1 more)
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
desktop/src-tauri/src/: main.rs  sidecar.rs  tray.rs
docs/: index.md
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: dev.py
(+60 files in other folders)
